# SR2-Flat-Shading

./: .gitignore  CMakeLists.txt  README.md
src/: fragment.h  main.cpp  triangle.h
